# cloud-functions

./: .gitignore
create-github-issue/functions/: package-lock.json
create-github-issue/functions/src/: index.ts
enrich-substitutions/: .firebaserc
enrich-substitutions/functions/src/: index.ts
export-oos-analytics/: README.md  pyproject.toml
export-oos-analytics/functions/: main.py  requirements.txt
export-page-analytics/: README.md  pyproject.toml  sync-requirements.sh
export-page-analytics/functions/: main.py  requirements.txt
export-page-analytics/functions/docs/: bigquery-metabase.md
export-to-bigquery/functions/: package-lock.json  package.json
generate-link-http/: QR_CODE_INTEGRATION.md  README.md  curls.md  test-default-qr.sh  test-validation.sh
generate-link-http/docs/: API_DOCUMENTATION.md  openapi.yaml  qr-code-integration-plan.md
generate-link-http/functions/: API_DOCUMENTATION.md  TESTING_SWAGGER.md  package-lock.json  package.json  swagger.json  test-swagger.html
handle-draft-changes/functions/: package-lock.json
pages-analytics-export/functions/: .gitignore  README.md  package-lock.json  package.json
sync-campaign-status/functions/: package-lock.json
sync-counts/functions/: package-lock.json
temp-sync-counts/functions/: package-lock.json
write-clicks-to-supabase/: .firebaserc  README.md  firebase.json
write-clicks-to-supabase/docs/: 05-analytics-pipeline.md
write-clicks-to-supabase/functions/: package-lock.json  package.json  pnpm-lock.yaml  test-geoip-coalescing.js  test-qr-tracking.js
(+19 files in other folders)
